--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,20 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<BsNavbar as |navbar|>
+  <div class="navbar-header">
+    <navbar.toggle />
+    <a class="navbar-brand" href="#">Birthday Gift</a>
+  </div>
+  <navbar.content>
+    <navbar.nav as |nav|>
+      {{#each model as |route|}}
+      <nav.item>
+        <nav.linkTo @route={{route.route}}>
+          {{route.name}}
+        </nav.linkTo>
+      </nav.item>
+      {{/each}}
+    </navbar.nav>
+  </navbar.content>
+</BsNavbar>
+<div class='container'>
+  {{outlet}}
+</div>
